
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_2__ TYPE_1__ ;


struct comedi_subdevice {int dummy; } ;
struct comedi_device {scalar_t__ iobase; } ;
struct TYPE_2__ {int us_OutputRegister; } ;


 unsigned int APCI3120_BIPOLAR_RANGES ;
 int APCI3120_CLEAR_PA_PR ;
 scalar_t__ APCI3120_SEQ_RAM_ADDRESS ;
 int APCI3120_UNIPOLAR ;
 scalar_t__ APCI3120_WR_ADDRESS ;
 unsigned short CR_CHAN (unsigned int) ;
 unsigned int CR_RANGE (unsigned int) ;
 int comedi_error (struct comedi_device*,char*) ;
 TYPE_1__* devpriv ;
 int outw (unsigned short,scalar_t__) ;
 int printk (char*,unsigned short) ;

int i_APCI3120_SetupChannelList(struct comedi_device *dev, struct comedi_subdevice *s,
 int n_chan, unsigned int *chanlist, char check)
{
 unsigned int i;
 unsigned int gain;
 unsigned short us_TmpValue;


 if (n_chan < 1) {
  if (!check)
   comedi_error(dev, "range/channel list is empty!");
  return 0;
 }

 if (check)
  return 1;


 devpriv->us_OutputRegister =
  devpriv->us_OutputRegister & APCI3120_CLEAR_PA_PR;
 devpriv->us_OutputRegister = ((n_chan - 1) & 0xf) << 8;
 outw(devpriv->us_OutputRegister, dev->iobase + APCI3120_WR_ADDRESS);

 for (i = 0; i < n_chan; i++) {

  us_TmpValue = CR_CHAN(chanlist[i]);

  if (CR_RANGE(chanlist[i]) < APCI3120_BIPOLAR_RANGES) {
   us_TmpValue &= ((~APCI3120_UNIPOLAR) & 0xff);
  } else {
   us_TmpValue |= APCI3120_UNIPOLAR;
  }

  gain = CR_RANGE(chanlist[i]);
  us_TmpValue |= ((gain & 0x03) << 4);
  us_TmpValue |= i << 8;
  outw(us_TmpValue, dev->iobase + APCI3120_SEQ_RAM_ADDRESS);

  printk("\n Gain = %i",
   (((unsigned char)CR_RANGE(chanlist[i]) & 0x03) << 2));
  printk("\n Channel = %i", CR_CHAN(chanlist[i]));
  printk("\n Polarity = %i", us_TmpValue & APCI3120_UNIPOLAR);
 }
 return 1;
}
